# hdaudio-uefi

./: .gitignore  README.md  qemu.sh  qemu2.sh  qemu3.sh  qemu4.sh
hdaudio/: Cargo.toml  log
hdaudio/src/: main.rs
hdaudio/src/hda/: cmdbuff.rs  common.rs  device.rs  io.rs  mod.rs  node.rs  stream.rs
hdaudio/src/pcid/: main.rs
hdaudio/src/pcid/driver_interface/: irq_helpers.rs  mod.rs  state.rs
hdaudio/src/pcid/pci/: bar.rs  cap.rs  class.rs  dev.rs  func.rs  header.rs  mod.rs  msi.rs
pcid/: Cargo.toml
pcid/src/: lib.rs  main.rs
pcid/src/driver_interface/: mod.rs
pcid/src/pci/: bus.rs  mod.rs  msi.rs
pcid/src/pcie/: mod.rs
