[package]
name = "ihdad"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "1"
log = "0.4"
#redox-daemon = "0.1"
#redox-log = "0.1"
#redox_event = { git = "https://gitlab.redox-os.org/redox-os/event.git" }
redox_syscall = "0.4"
spin = "0.9"

common = { path = "../common" }
pcid = { path = "../pcid" }
lazy_static = "1.4.0"
async-executor = "1.6.0"
futures-lite = { version = "2.0.0" }
