cargo-features = ["codegen-backend"]
[package]
name = "ihdad"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "1"
log = "0.4"
#redox-daemon = "0.1"
#redox-log = "0.1"
#redox_event = { git = "https://gitlab.redox-os.org/redox-os/event.git" }
redox_syscall = "0.4"
spin = "0.9"

common = { path = "../common" }
#pcid = { path = "../pcid" }
crossbeam = { version = "0.8.2", default-features = false, features = ["crossbeam-channel", "nightly", "alloc", "std"] }
bincode = "1.2"
byteorder = "1.2"
paw = "1.0"
plain = "0.2"
#redox-log = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1"
#structopt = { version = "0.3", default-features = false, features = [ "paw" ] }
thiserror = "1"
toml = "0.5"

lazy_static = "1.4.0"
